update HI Model

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
 
-SRCS = reader.cpp generator.cpp Segment.cpp Chrom.cpp ChromPair.cpp Population.cpp AdmixModel.cpp
+SRCS = reader.cpp generator.cpp Segment.cpp Chrom.cpp ChromPair.cpp Population.cpp Model.cpp AdmixModel.cpp
 
-OBJS = reader.o generator.o Segment.o Chrom.o ChromPair.o Population.o AdmixModel.o
+OBJS = reader.o generator.o Segment.o Chrom.o ChromPair.o Population.o Model.o AdmixModel.o
 
 LIBS =
 
