--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,27 @@
-CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
+CXX=g++
+CXXFLAGS =	-O3 -g -Wall -fmessage-length=0
 
-SRCS = reader.cpp generator.cpp Segment.cpp Chrom.cpp ChromPair.cpp Population.cpp Model.cpp AdmixModel.cpp
+SRCS = Segment.cpp Chrom.cpp ChromPair.cpp Population.cpp Model.cpp AdmixModel.cpp
 
-OBJS = reader.o generator.o Segment.o Chrom.o ChromPair.o Population.o Model.o AdmixModel.o
+OBJS = $(SRCS:.cpp=.o)
 
 LIBS =
 
-TARGET =	AdmixModel
+TARGET = AdmixModel
 
 $(TARGET):	$(OBJS)
 	$(CXX) -o $(TARGET) $(OBJS) $(LIBS)
 
-all:	$(TARGET)
+all:	$(TARGET) reader generator
+
+reader:	reader.cpp
+	$(CXX) $(CXXFLAGS) -o reader reader.cpp
+	
+generator: generator.cpp
+	$(CXX) $(CXXFLAGS) -o generator generator.cpp
+
+.cpp.o:
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS) $(TARGET)
+	rm -f $(OBJS) $(TARGET) reader reader.o generator.o
