--- a/src/Makefile
+++ b/src/Makefile
@@ -1,27 +1,26 @@
 CXX=g++
 CXXFLAGS =	-O3 -g -Wall -fmessage-length=0
 
-SRCS = Segment.cpp Chrom.cpp ChromPair.cpp Population.cpp Model.cpp AdmixModel.cpp generator.cpp
+SRCS = Segment.cpp Chrom.cpp ChromPair.cpp Population.cpp GeneralModel.cpp AdmSimulator.cpp generator.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
 LIBS =
 
-TARGET = AdmixModel
+TARGET = AdmSimulator
 
 $(TARGET):	$(OBJS)
 	$(CXX) -o $(TARGET) $(OBJS) $(LIBS)
 
-all:	$(TARGET) reader generator
+all:	$(TARGET) reader AdmixModel
 
 reader:	reader.cpp
 	$(CXX) $(CXXFLAGS) -o reader reader.cpp
-	
-generator: generator.cpp
-	$(CXX) $(CXXFLAGS) -o generator generator.cpp
+
+AdmixModel: Segment.o Chrom.o ChromPair.o Population.o Model.cpp AdmixModel.cpp generator.o
 
 .cpp.o:
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS) $(TARGET) reader reader.o generator generator.o
+	rm -f $(OBJS) $(TARGET) reader reader.o Model.o AdmixModel.o AdmixModel
